unpackaged/main/default/objects/ffc__Event__c/ffc__Event__c.object-meta.xml
<CustomObject>
    <description>Holds Financial Force Events, News and Blogs...</description>
    <label>Event</label>
    <nameField>
        <label>Events Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>