unpackaged/main/default/objects/ffc__Event__c/fields/ffc__DateCreated__c.field-meta.xml
<CustomField>
    <fullName>ffc__DateCreated__c</fullName>
    <label>DateCreated</label>
    <length>10</length>
    <type>Text</type>
</CustomField>