unpackaged/main/default/objects/ffc__Event__c/fields/ffc__Description__c.field-meta.xml
<CustomField>
    <fullName>ffc__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>