unpackaged/main/default/objects/ffc__Event__c/fields/ffc__Sequence__c.field-meta.xml
<CustomField>
    <fullName>ffc__Sequence__c</fullName>
    <label>Sequence</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>