unpackaged/main/default/objects/ffc__Event__c/fields/ffc__StartDate__c.field-meta.xml
<CustomField>
    <fullName>ffc__StartDate__c</fullName>
    <label>Start Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>