unpackaged/main/default/objects/ffc__Event__c/fields/ffc__StartTime__c.field-meta.xml
<CustomField>
    <fullName>ffc__StartTime__c</fullName>
    <label>Start Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>