unpackaged/main/default/objects/ffc__Event__c/fields/ffc__ThumbnailLargeURI__c.field-meta.xml
<CustomField>
    <fullName>ffc__ThumbnailLargeURI__c</fullName>
    <label>Thumbnail Large URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>