unpackaged/main/default/objects/ffc__Event__c/fields/ffc__ThumbnailSmallURI__c.field-meta.xml
<CustomField>
    <fullName>ffc__ThumbnailSmallURI__c</fullName>
    <label>Thumbnail Small URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>