unpackaged/main/default/objects/ffc__Event__c/fields/ffc__Type__c.field-meta.xml
<CustomField>
    <fullName>ffc__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BLOG</fullName>
            </value>
            <value>
                <fullName>NEWS</fullName>
            </value>
            <value>
                <fullName>EVENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>