unpackaged/main/default/objects/ffc__Event__c/listViews/ffc__All.listView-meta.xml
<ListView>
    <fullName>ffc__All</fullName>
    <columns>ffc__Type__c</columns>
    <columns>NAME</columns>
    <columns>ffc__Title__c</columns>
    <columns>ffc__StartDate__c</columns>
    <columns>ffc__StartTime__c</columns>
    <columns>ffc__ThumbnailLargeURI__c</columns>
    <columns>ffc__ThumbnailSmallURI__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>